tests/chainsaw/check-policy-ready/check-policy-ready.yaml
# Example of how to check if a Policy is ready using templates
# Note: The policy needs to already exist in the test cluster.
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-policy-is-ready
spec:
  steps:
  - name: check if policy is ready
    use:
      template: ../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: my-policy-name
